<resources>
    <string name="app_name">Coffee</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="only_small_case_and_numbers">Only Small Case and Numbers</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="enter_a_valid_username">Enter a valid Username</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="full_name">Full Name</string>
    <string name="min_8_characters">Min 8 characters</string>
    <string name="min_8_characters1">Min 8 characters</string>
    <string name="password1">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="username">UserName</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="online_wallet">Online Wallet</string>
    <string name="total_bill">Total Bill</string>
    <string name="transaction_id_10568807570">Transaction Id: 10568807570</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
</resources>
