<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="casual"/>

    <EditText
        android:id="@+id/nameedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_full_name"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:id="@+id/useredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_valid_username"
        android:textColor="@android:color/white"
        android:inputType="text"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="casual"/>

    <EditText
        android:id="@+id/emailedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_id"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="casual"/>

    <EditText
        android:id="@+id/passedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_8_characters"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/passconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="casual"/>

    <EditText
        android:id="@+id/passconfirmedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_8_characters1"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceMedium"
        android:fontFamily="casual"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:layout_height="0dp">

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:text="@string/submit"
            tools:ignore="NestedWeights"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>


</LinearLayout>