<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.coffee.MainActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:layout_marginTop="48dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:fontFamily="casual"
        android:textColor="@android:color/white"
        android:hint="@string/only_small_case_and_numbers"
        android:textColorHint="#F3E5F5"
        android:maxLines="1"
        android:inputType="text"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:fontFamily="casual"
        android:hint="@string/minimum_8_characters"
        android:textColor="@android:color/white"
        android:textColorHint="#F3E5F5"
        android:inputType="textPassword"
        tools:ignore="TextFields"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/password_edit"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

</RelativeLayout>
