<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:padding="8dp"
    android:id="@+id/listview">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginRight="8dp"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:contentDescription="" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="84dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/coffeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Coffee Name"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/coffeeIngredients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:text="Ingredients"
        android:textSize="10sp"
        tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:text="@string/minus"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:text="@string/add"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>